# LLM-ZoomCamp-Intro

./: .gitignore  .pre-commit-config.yaml  README.md  elastic-rag.ipynb  pyproject.toml  semantic_search.ipynb
.ipynb_checkpoints/: elastic-rag-checkpoint.ipynb  semantic_search-checkpoint.ipynb
