[tool.poetry]
name = "llm-zoomcamp-intro"
version = "0.1.0"
description = ""
authors = ["ifannai <nebulaefe@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.5"
openai = "^1.38.0"
elasticsearch = "^8.14.0"


[tool.poetry.group.dev.dependencies]
notebook = "7.1.2"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
